<resources>
    <string name="app_name">Klik Sewa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Auth -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="create_new_account">Don\'t have any account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="full_name_ktp">Full name on KTP</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="nik">NIK</string>
    <string name="password">Password</string>
    <string name="confirmation_password">Confirmation Password</string>
    <string name="merchant">Merchant</string>
    <string name="select_role">Select Role</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="check_email">Check Email</string>
    <string name="send_otp">Send OTP</string>
    <string name="submit">Submit</string>
    <string name="otp">OTP</string>
    <string name="new_password">New Password</string>

    <!-- Bottom Navigation Menu -->
    <string name="bottom_navigation_menu_home">Home</string>
    <string name="bottom_navigation_menu_explore">Explore</string>
    <string name="bottom_navigation_menu_favorite">Favorite</string>
    <string name="bottom_navigation_menu_user">User</string>

    <!--  Home Fragment  -->
    <string name="search">Search</string>
    <string name="recommend_for_you">Recommended For You</string>

    <!-- Category Product Text -->
    <string name="car">Car</string>
    <string name="camera">Camera</string>
    <string name="electronic">Electronic</string>
    <string name="other">Other</string>
    <string name="building">Building</string>
    <string name="clothes">Clothes</string>
    <string name="hobbies">Hobbies</string>

    <string-array name="category_product_text">
        <item>@string/car</item>
        <item>@string/camera</item>
        <item>@string/electronic</item>
        <item>@string/other</item>
        <item>@string/building</item>
        <item>@string/clothes</item>
        <item>@string/hobbies</item>
    </string-array>

    <!--  Category Product Image  -->
    <string-array name="category_product_image">
        <item>@drawable/ic_car</item>
        <item>@drawable/ic_camera</item>
        <item>@drawable/ic_modern_tv</item>
        <item>@drawable/ic_drawer</item>
        <item>@drawable/ic_building</item>
        <item>@drawable/ic_shirt</item>
        <item>@drawable/ic_people_tag</item>
    </string-array>

    <string name="storage_product">Product\nStorage</string>
    <string name="add_product">Add\nProduct</string>
    <string name="add_product_no_enter">Add Product</string>

    <!--  Owner Menu Text  -->
    <string-array name="owner_menu_text">
        <item>@string/storage_product</item>
        <item>@string/add_product</item>
    </string-array>

    <!--  Owner Menu Image  -->
    <string-array name="owner_menu_image">
        <item>@drawable/ic_garage</item>
        <item>@drawable/ic_grid_plus</item>
    </string-array>

    <string name="notification">Notification</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>

    <string-array name="settings_menu_text">
        <item>@string/notification</item>
        <item>@string/change_password</item>
        <item>@string/about</item>
        <item>@string/logout</item>
    </string-array>

    <string-array name="settings_menu_image">
        <item>@drawable/ic_bell</item>
        <item>@drawable/ic_lock</item>
        <item>@drawable/ic_warning_circle</item>
        <item>@drawable/ic_log_out</item>
    </string-array>

    <string name="product_details">Product Details</string>
    <string name="product_price">Product Price</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Description</string>
    <string name="product_address">Address</string>
    <string name="product_categories">Categories</string>
    <string name="product_images">Images</string>
    <string name="product_unit_price">Unit Price</string>
    <string name="product_price_per_hour">Price Per Hour</string>
    <string name="product_price_per_day">Price Per Day</string>
    <string name="product_price_per_week">Price Per Week</string>
    <string name="product_price_per_month">Price Per Month</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.

        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.

        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.

        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.
    </string>

    <!-- Detail Product -->
    <string name="add_to_cart">Add to Cart</string>
    <string name="read_more">Read More....</string>
    <string name="show_less">Show Less</string>
    <string name="total_price">Total Price</string>
    <string name="product_price_type_per_hour">Per Hour</string>
    <string name="product_price_type_per_day">Per Day</string>
    <string name="product_price_type_per_week">Per Week</string>
    <string name="product_price_type_per_month">Per Month</string>
    <string-array name="product_price_type">
        <item>@string/product_price_type_per_hour</item>
        <item>@string/product_price_type_per_day</item>
        <item>@string/product_price_type_per_week</item>
        <item>@string/product_price_type_per_month</item>
    </string-array>

    <!--  Cart  -->
    <string name="cart">Cart</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="apply">Apply</string>
    <string name="placeholder_enter_coupon_code">Enter Coupon Code</string>
    <string name="payment_details">Payment Details</string>
    <string name="shipping_fee">Shipping Fee</string>
    <string name="sub_total">Sub Total</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>


</resources>