<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.product.add.AddProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Back Button -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@android:color/transparent"
            app:strokeWidth="0dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_dot_arrow_left" />




        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_semi_bold"
                android:text="@string/product_images"
                android:textSize="18sp"
                android:layout_weight="1"
                android:textColor="@color/black"/>

            <!-- Toggle Button Favorite -->
            <ImageButton
                android:id="@+id/btn_delete_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_trash_solid" />

        </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_pick_images"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="16dp"
                android:backgroundTint="@android:color/transparent"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:background="@drawable/dashed_border_product_image">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:strokeColor="@color/gray"
                        android:layout_marginEnd="8dp"
                        app:strokeWidth="0dp"
                        android:backgroundTint="@android:color/transparent">

                        <ImageView
                            android:id="@+id/iv_product_image_1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_media_image_plus"/>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        app:strokeColor="@color/gray"
                        android:layout_marginStart="8dp"
                        app:strokeWidth="0dp"
                        android:backgroundTint="@android:color/transparent">

                        <ImageView
                            android:id="@+id/iv_product_image_2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_media_image_plus"/>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/opensans_semi_bold"
            android:text="@string/product_details"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <!-- Product Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_product_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_package"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/product_name"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_product_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:ellipsize="end"
                android:inputType="text"
                android:maxLines="4" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Product Description -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_product_description_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/product_description"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_product_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:ellipsize="end"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:lines="4"
                android:maxLines="8"
                android:minLines="4" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Product Address -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_product_address_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:startIconDrawable="@drawable/ic_map_pin"
            android:layout_marginTop="16dp"
            android:hint="@string/product_address"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_product_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:ellipsize="end"
                android:inputType="text"
                android:maxLines="4" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdown_product_category_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/product_categories"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:startIconDrawable="@drawable/ic_playlist_plus"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp">

            <AutoCompleteTextView
                android:id="@+id/dropdown_product_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false"
                android:clickable="true"
                android:background="@null"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/opensans_semi_bold"
            android:text="@string/product_price"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <!-- Product Unit Price -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_product_unit_price_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/product_unit_price"
            app:startIconDrawable="@drawable/ic_money_square"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_product_unit_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:ellipsize="end"
                android:inputType="numberDecimal"
                android:maxLines="4" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <!-- Product Price per Hour -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_product_price_per_hour_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:hint="@string/product_price_per_hour"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_product_price_per_hour"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/transparent"
                    android:ellipsize="end"
                    android:inputType="numberDecimal"
                    android:maxLines="4" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Product Price per Day -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_product_price_per_day_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:hint="@string/product_price_per_day"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_product_price_per_day"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/transparent"
                    android:ellipsize="end"
                    android:inputType="numberDecimal"
                    android:maxLines="4" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <!-- Product Price per Hour -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_product_price_per_week_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:hint="@string/product_price_per_week"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_product_price_per_week"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/transparent"
                    android:ellipsize="end"
                    android:inputType="numberDecimal"
                    android:maxLines="4" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Product Price per Day -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_product_price_per_month_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:hint="@string/product_price_per_month"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_product_price_per_month"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/transparent"
                    android:ellipsize="end"
                    android:inputType="numberDecimal"
                    android:maxLines="4" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_product"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/opensans_medium"
            android:text="@string/add_product_no_enter"
            app:cornerRadius="12dp"
            app:textAllCaps="false" />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>